--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,3 +10,18 @@
     --color-gray-600:#95989c;
 
 }
+
+.twitter-tweet {
+  margin: 0 !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+  width: 100% !important;
+  max-width: 100% !important;
+  transform: none !important;
+}
+
+.twitter-tweet iframe {
+  margin: 0 !important;
+  width: 100% !important;
+  max-width: 100% !important;
+}
